# srfmolina.github.io

./: .gitignore  Cargo.toml  Dioxus.toml  LICENSE  index.html
.forgejo/workflows/: deploy.yml
.github/workflows/: deploy.yml
assets/: main.css
reference/: README.md  counter.rs  login.rs
src/: lib.rs  main.rs
src/data/: mod.rs
src/data/api/: links_api.rs  mod.rs
src/data/datasource/: mod.rs
src/data/datasource/links/: links_data_source.rs  mod.rs
src/data/entity/: mod.rs
src/data/entity/links/: links_dto.rs  mod.rs
src/data/mapper/: links_mapper.rs  mod.rs
src/data/repository/: links_repository_impl.rs  mod.rs
src/domain/: error.rs  mod.rs
src/domain/model/: mod.rs
src/domain/model/links/: contact.rs  links.rs  mod.rs  project_link.rs
src/domain/repository/: links_repository.rs  mod.rs
src/domain/usecase/: mod.rs
src/domain/usecase/links/: get_links_use_case.rs  mod.rs
src/ui/: app.rs  app_view_model.rs  mod.rs
src/ui/base/: base_view_model.rs  macros.rs  mod.rs  ui_effect.rs  ui_event.rs  ui_state.rs
src/ui/i18n/: language.rs  mod.rs  texts.rs
src/ui/presentation/: mod.rs
src/ui/presentation/common/: footer.rs  header.rs  mod.rs
src/ui/presentation/feature/: mod.rs
src/ui/presentation/feature/home/: home_screen.rs  home_view_model.rs  mod.rs
src/ui/presentation/feature/home/component/: hero.rs
src/ui/presentation/feature/home/navigation/: home_navigation.rs  mod.rs
src/ui/presentation/feature/projects/: mod.rs  projects_screen.rs  projects_view_model.rs
src/ui/presentation/feature/projects/navigation/: mod.rs  projects_navigation.rs
src/ui/presentation/navigation/: mod.rs  navigation_component.rs  route.rs
